implemented basic object browser

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       display: block;
     }
   </style>
+  <!-- Lucide Icons -->
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
   <script src="/socket.io/socket.io.js"></script>
